chore: API product CRUD with image upload
