# routes/product.route.js
@@ -1,5 +1,6 @@
 const router = require("express").Router();
 const authentication = require("../middlewares/authentication");
+const upload = require("../middlewares/upload");
 const { handleCommonValidation } = require("../handlers/validation.handler");
 
 const productCategoryController = require("../controllers/productcategory.controller");
@@ -7,6 +8,10 @@ const {
   productCategoryValidation,
 } = require("../validators/productcategory.validator");
 
+const productController = require("../controllers/product.controller");
+const { productValidation } = require("../validators/product.validator");
+
+// Product Category Routes
 router.post(
   "/category/create",
   authentication,
@@ -32,5 +37,30 @@ router.delete(
   authentication,
   productCategoryController.destroy
 );
+
+// Product Routes
+router.post(
+  "/create",
+  authentication,
+  productValidation,
+  handleCommonValidation,
+  productController.create
+);
+router.patch(
+  "/image/:id",
+  authentication,
+  upload.single("file"),
+  productController.upload
+);
+router.get("/list", authentication, productController.list);
+router.get("/detail/:id", authentication, productController.detail);
+router.put(
+  "/update/:id",
+  authentication,
+  productValidation,
+  handleCommonValidation,
+  productController.update
+);
+router.delete("/delete/:id", authentication, productController.destroy);
 
 module.exports = router;
